deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cadish
  labels:
    app.kubernetes.io/name: cadish
